syntax = "proto3";

package pb;

option go_package = "github.com/NordSecurity/nordvpn-linux/daemon/pb";

message DedidcatedIPService {
  int64 server_id = 1;
  string dedicated_ip_expires_at = 2;
}

enum MFAStatus {
  UNKNOWN = 0;
  DISABLED = 1;
  ENABLED = 2;
}

message AccountResponse {
  int64 type = 1;
  string username = 2;
  string email = 3;
  string expires_at = 4;
  int64 dedicated_ip_status = 5;
  string last_dedicated_ip_expires_at = 6;
  repeated DedidcatedIPService dedicated_ip_services = 7;
  MFAStatus mfa_status = 8;
}
